# BorderLine

./: CLA.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  EdgeOffsetConfig.ini.example  vcpkg.json
docs/: EDGE_LOGIC_README.md
src/Adapter/cadwork/: AttributeControl.cc  AttributeControl.hh  CMakeLists.txt  ElementControl.cc  ElementControl.hh  GeometryControl.cc  GeometryControl.hh  ShopDrawingControl.cc  ShopDrawingControl.hh  UtilityControl.cc  UtilityControl.hh  VisualizationControl.cc  VisualizationControl.hh
src/Adapter/cadwork/config/: ConfigurationAdapter.cc  ConfigurationAdapter.hh
src/Adapter/cadwork/strategies/: SortingStrategies.hh  SortingStrategyFactory.cc  SortingStrategyFactory.hh  StandardEdgeOffsetStrategy.cc  StandardEdgeOffsetStrategy.hh  StandardTriangleStrategy.cc  StandardTriangleStrategy.hh
src/App/: CMakeLists.txt  bootstrap.cc
src/EdgeProfile/: CMakeLists.txt  CabinetAggregate.cc  CabinetAggregate.hh  CabinetBuilder.cc  CabinetBuilder.hh  CabinetElement.cc  CabinetElement.hh  CabinetElementAttributes.cc  CabinetElementAttributes.hh  CabinetElementGeometry.cc  CabinetElementGeometry.hh  CabinetNode.hh  EdgeGeometryUtils.cc  EdgeGeometryUtils.hh  EdgeLine.hh  EdgeOffsetConfig.hh  EdgeProfileLogic.cc  EdgeProfileLogic.hh  EdgeProfilePositionData.hh  NestingAggregate.cc  NestingAggregate.hh
src/EdgeProfile/ports/: CMakeLists.txt  IAttributeControlPort.hh  IConfigurationPort.hh  IEdgeImageGenerator.hh  IEdgeOffsetStrategy.hh  IEdgeProfileWorkflowService.hh  IElementControlPort.hh  IGeometryControlPort.hh  IShopDrawingControlPort.hh  ISortingStrategy.hh  ISortingStrategyFactory.hh  ITriangleStrategy.hh  IUtilityControlPort.hh  IVisualizationControlPort.hh
src/EdgeProfile/services/: AttributeMappingService.cc  AttributeMappingService.hh  CMakeLists.txt  ColorApplicationService.cc  ColorApplicationService.hh  EdgeImageService.cc  EdgeImageService.hh  EdgeProfileWorkflowService.cc  EdgeProfileWorkflowService.hh  ElementGroupProcessingService.cc  ElementGroupProcessingService.hh  ProductionNumberGuard.cc  ProductionNumberGuard.hh  ShopDrawingExportService.cc  ShopDrawingExportService.hh  TriangleSymbolService.cc  TriangleSymbolService.hh
src/EdgeProfile/types/: CMakeLists.txt  types.hh
src/EdgeProfile/utility/: VectorAlignmentUtility.cc  VectorAlignmentUtility.hh  utility_types.hh
src/UI/: CMakeLists.txt  TranslationManager.cc  TranslationManager.hh  UISettings.hh  cjtcedgesdialog.cpp  cjtcedgesdialog.h  cjtcedgesdialog.ui
src/UI/styles/: modern.qss
src/UI/viewmodels/: CMakeLists.txt  EdgeImageViewModel.cc  EdgeImageViewModel.hh
tests/: CMakeLists.txt  EdgeProfileLogicTest.cc  Mocks.hh  StandardEdgeOffsetStrategyTest.cc  test-main.cc
